Front-end: Fix z-index scroll-bar for main menu

--- a/web/themes/custom/nine9_mobile/scss/layouts/_layout.scss
+++ b/web/themes/custom/nine9_mobile/scss/layouts/_layout.scss
@@ -24,6 +24,8 @@ body {
   // @include show-breakpoints;
   text-size-adjust: none;
   background-color: $gray-f8;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 
